src/objects/SBQQ__PriceAction__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceActionHelp</customHelpPage>
    <description>Action that takes place when the parent price rule fires.</description>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Field__c</fullName>
        <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional_Services_Total__c</fullName>
                </value>
                <value>
                    <fullName>Amount_of_Workstations__c</fullName>
                </value>
                <value>
                    <fullName>Amount_Remaining__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Average__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Average_Without_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Avg_wo_Discount_per_Space__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Cost__c</fullName>
                </value>
                <value>
                    <fullName>Annual_Price_per_Sq_Ft__c</fullName>
                </value>
                <value>
                    <fullName>Billable__c</fullName>
                </value>
                <value>
                    <fullName>Break_Date__c</fullName>
                </value>
                <value>
                    <fullName>Building_Insurance_per_sq_ft_Annual__c</fullName>
                </value>
                <value>
                    <fullName>Cap_Expiry_Month__c</fullName>
                </value>
                <value>
                    <fullName>Car_Parking_Lease_Monthly_Cost__c</fullName>
                </value>
                <value>
                    <fullName>Comparable_ID_for_Calculator__c</fullName>
                </value>
                <value>
                    <fullName>Conventional_Products_Qty__c</fullName>
                </value>
                <value>
                    <fullName>Cost_per_Sq_Ft_Annual__c</fullName>
                </value>
                <value>
                    <fullName>Customer_Price__c</fullName>
                </value>
                <value>
                    <fullName>Date__c</fullName>
                </value>
                <value>
                    <fullName>Date_for_Comparison__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Amount__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Monthly_Average__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Payment_Total__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Q_L__c</fullName>
                </value>
                <value>
                    <fullName>Design_Lines_Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Dilapidations_Lines_Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Amount__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Amount_Certain__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Full_Term__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Full_Term_Percent__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Percent__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Formula__c</fullName>
        <description>You can construct a formula using many of Salesforce&apos;s available operators and functions. Refer to Salesforce CPQ documentation for the full list. You can also add in information from the quote or the target object field (i.e., SBQQ__QuoteLine__c.SBQQ__ListPrice__c).</description>
        <inlineHelpText>Enter a formula with operators, functions, and available fields on quote and target object. Not supported on legacy calculator.</inlineHelpText>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <description>Number which determines the order in which multiple actions on a rule are executed.</description>
        <inlineHelpText>Number which determines the order in which multiple actions on a rule are executed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleLookupObject__c</fullName>
        <formula>TEXT(SBQQ__Rule__r.SBQQ__LookupObject__c)</formula>
        <label>Rule Lookup Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RuleTargetsCalculator__c</fullName>
        <formula>ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Calculator&apos;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Quote Line&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RuleTargetsCalculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Price rule running this action.</description>
        <inlineHelpText>Price rule running this action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Actions</relationshipLabel>
        <relationshipName>PriceActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__SourceLookupField__c</fullName>
        <description>API Name of the field to return from the row matching the condition.</description>
        <inlineHelpText>API Name of the field to return from the row matching the condition.</inlineHelpText>
        <label>Source Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available_From_Date__c</fullName>
                </value>
                <value>
                    <fullName>Comparable_ID_for_Calculator__c</fullName>
                </value>
                <value>
                    <fullName>Cost_per_space__c</fullName>
                </value>
                <value>
                    <fullName>Cost_per_space_Annual__c</fullName>
                </value>
                <value>
                    <fullName>Deposit_Payment_Total__c</fullName>
                </value>
                <value>
                    <fullName>Discount_Amount_Total__c</fullName>
                </value>
                <value>
                    <fullName>Estate_Charge_per_sq_ft__c</fullName>
                </value>
                <value>
                    <fullName>Estate_Charge_per_sq_ft_Annual__c</fullName>
                </value>
                <value>
                    <fullName>Estate_Charge_Total__c</fullName>
                </value>
                <value>
                    <fullName>Floor_Number__c</fullName>
                </value>
                <value>
                    <fullName>Ground_Rent_Charge_per__c</fullName>
                </value>
                <value>
                    <fullName>Ground_Rent_Charge_Total__c</fullName>
                </value>
                <value>
                    <fullName>Headline_Item_Subscription_Term__c</fullName>
                </value>
                <value>
                    <fullName>Incumbent_End_Date__c</fullName>
                </value>
                <value>
                    <fullName>Incumbent_Start_Date__c</fullName>
                </value>
                <value>
                    <fullName>Insurance_Charge_per_sq_ft__c</fullName>
                </value>
                <value>
                    <fullName>Insurance_Charge_per_sq_ft_Annual__c</fullName>
                </value>
                <value>
                    <fullName>Insurance_Charge_Total__c</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Non_Billable_Product__c</fullName>
                </value>
                <value>
                    <fullName>Parent_Property_Address__c</fullName>
                </value>
                <value>
                    <fullName>Parent_Property_Post_Code__c</fullName>
                </value>
                <value>
                    <fullName>Post_Code__c</fullName>
                </value>
                <value>
                    <fullName>Postcode__c</fullName>
                </value>
                <value>
                    <fullName>Pre_emption_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Property__c</fullName>
                </value>
                <value>
                    <fullName>Property_Address__c</fullName>
                </value>
                <value>
                    <fullName>Record_Type__c</fullName>
                </value>
                <value>
                    <fullName>Record_Type_Name__c</fullName>
                </value>
                <value>
                    <fullName>Rent_per_sq_ft__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SourceVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that sources value for this action.</description>
        <inlineHelpText>Summary variable that sources value for this action.</inlineHelpText>
        <label>Source Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Actions (Source)</relationshipLabel>
        <relationshipName>SourcePriceActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <inlineHelpText>Select the object on which the field is defined</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>Name of the field that sources value for this action.</description>
        <inlineHelpText>If the value you want inserted is calculated in another Quote Line field, select the field here.</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Value__c</fullName>
        <description>The value that will be inserted into the Target Field when conditions are met.</description>
        <inlineHelpText>Enter the value you want inserted into the Target Field when conditions are met.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Target_Object_Validation</fullName>
        <active>true</active>
        <description>Prevents users from creating Price Actions targeting an out-of-scope object.</description>
        <errorConditionFormula>(ISPICKVAL(SBQQ__TargetObject__c, &apos;Product Option&apos;) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Product Option&apos;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Configurator&apos;))) || ((ISPICKVAL(SBQQ__TargetObject__c, &apos;Quote&apos;) || ISPICKVAL(SBQQ__TargetObject__c, &apos;Quote Line&apos;)) &amp;&amp; NOT(ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Quote Line&apos;) || ISPICKVAL(SBQQ__Rule__r.SBQQ__TargetObject__c, &apos;Calculator&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TargetObject__c</errorDisplayField>
        <errorMessage>Price Action Target Object must match Price Rule Target Object</errorMessage>
    </validationRules>
</CustomObject>